Corrige Bugs (Layout Shift)

--- a/style/fields/droparea.css
+++ b/style/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone{
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: .25rem;
   display: grid;
   justify-items: center;
@@ -21,8 +22,8 @@
   }
 
   &:hover, &:has(input:focus){
-    border-width: 2px;
-    border-color: var(--stroke-hightlight);
+    outline-width: 0;
+    border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
     
     & p{
@@ -30,7 +31,7 @@
     }
     
     & svg path{
-      stroke: var(--stroke-hightlight);
+      stroke: var(--stroke-highlight);
     }
   }
 }
